Conformed base CSS to be mobile first.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Brighton Times</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
@@ -37,7 +38,7 @@
         </section>
 
         <section class="news top-news">
-          <h2 class="news__title">Top news <a href="#" class="news__more">+ more</a></h2>
+          <h2 class="news__title">Top news</h2>
           <ul>
             <li class="top-news__item">
               <a href="#">Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.</a>
@@ -50,6 +51,9 @@
             </li>
             <li class="top-news__item">
               <a href="#">Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</a>
+            </li>
+            <li class="top-news__item">
+              <a href="#">+ more</a>
             </li>
           </ul>
         </section>
